[package]
name = "moonlit-client"
edition = "2024"
version = "0.1.0"

[dependencies]
bevy = { workspace = true }
bevy-panic-handler = { workspace = true }
bevy_seedling = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_modern_pixel_camera = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"]
